Spacing fixes

--- a/v6.0/styles/_home-6.scss
+++ b/v6.0/styles/_home-6.scss
@@ -243,6 +243,9 @@ h5{
         font-family: "Shapiro 75 Heavy Wide";
         text-align: center;
         margin-bottom: 70px;
+        @media only screen and (max-width: 480px){
+            margin-bottom: 30px;
+        }
     }
     @media only screen and (max-width: 480px){
         font-size: 13px;
